--- a/src/assets/style/modules/_vars.scss
+++ b/src/assets/style/modules/_vars.scss
@@ -12,6 +12,7 @@ $containerPadding: 30;
 // ЦВЕТА
 $colorWhite: #fff;
 $colorDark: #222;
+$colorBlue: #1890FF;
 
 // СТАНДАРТНЫЕ НАСТРОЙКИ СТРАНИЦЫ
 $colorBg: #fff;
