--- a/src/assets/style/modules/_vars.scss
+++ b/src/assets/style/modules/_vars.scss
@@ -16,6 +16,8 @@ $colorBlue: #1890FF;
 
 // СТАНДАРТНЫЕ НАСТРОЙКИ СТРАНИЦЫ
 $colorBg: #fff;
+$colorRed:#ff4d4f;
+
 $fontFamily: 'Roboto', sans-serif;;
 $fontRoboto: 'Roboto', sans-serif;
 $fontMcLaren: 'McLaren', sans-serif;
