--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -51,7 +51,7 @@ body {
 ._container {
   padding: 0px #{calc($containerPadding / 2) + px} 0px #{calc($containerPadding / 2) + px};
   margin: 0px auto;
-  max-width: $maxWidthContainer + px;
+  max-width: $maxWidthContainer + $containerPadding  + px;
 }
 .page {
   flex: 1 1 auto;
