--- a/src/assets/style/modules/_ant-design.scss
+++ b/src/assets/style/modules/_ant-design.scss
@@ -4,8 +4,12 @@
 
 .ant-dropdown-menu{
   padding: 0;
+  background-color: var(--bg-drop-down);
+}
+.ant-dropdown-menu-item{
+  color: var(--color-drop-down);
 }
 .ant-dropdown-menu-item:hover, .ant-dropdown-menu-submenu-title:hover{
-  background-color: #E6F7FF;
+  background-color: var(--bg-hover-drop-down);
   color: $colorBlue;
 }
