--- a/src/assets/style/components/header.scss
+++ b/src/assets/style/components/header.scss
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     @include adaptiv-value(column-gap, 8, 4, 1);
-    color: #313e5a;
+    color: var(--darkBlue);
     font-family: Geometria;
     @include adaptiv-font(22, 16);
     padding: 3px 0;
