--- a/src/assets/style/modules/_nullstyle.scss
+++ b/src/assets/style/modules/_nullstyle.scss
@@ -33,8 +33,8 @@ aside {
 
 html,
 body {
-  height: 100%;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 320px;
   font-size: 100%;
   line-height: 1;
   font-size: 14px;
