add dark theme policy page, update progress in make page

--- a/src/assets/style/modules/_ant-design.scss
+++ b/src/assets/style/modules/_ant-design.scss
@@ -13,3 +13,6 @@
   background-color: var(--bg-hover-drop-down);
   color: $colorBlue;
 }
+.ant-progress-circle .ant-progress-text{
+  color: var(--black);
+}
