--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -32,13 +32,14 @@ body {
 }
 #app{
   // height: 100%;
+  min-height: 100vh;
   // width: 100%;
   background-color: var(--background);
 }
 
 //< " ОБОЛОЧКА " >=============================================================================================================>//
 .wrapper {
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   overflow: hidden;
