add empty in run page

--- a/src/assets/style/modules/_themes.scss
+++ b/src/assets/style/modules/_themes.scss
@@ -5,6 +5,7 @@
   --black: rgba(0, 0, 0, 0.85);
   --ant-border: #F0F0F0;
   --gray:rgba(0, 0, 0, 0.45);
+  --darkGray: #BFBFBF;
   --bg-drop-down:#fff;
   --color-drop-down: var(--black);
   --bg-hover-drop-down: #E6F7FF;
@@ -27,6 +28,7 @@ html.dark {
   --black: rgba(255, 255, 255);
   --ant-border: #18191C;
   --gray:#F5F5F5;
+  --darkGray: #464646;
   --bg-drop-down:#1F1F1F;
   --color-drop-down: #FFF0F6;
   --bg-hover-drop-down: #1f2329;
