add page user profile

--- a/src/assets/style/modules/_themes.scss
+++ b/src/assets/style/modules/_themes.scss
@@ -5,7 +5,8 @@
   --black: rgba(0, 0, 0, 0.85);
   --ant-border: #F0F0F0;
   --gray:rgba(0, 0, 0, 0.45);
-  --darkGray: #BFBFBF;
+  --blackGray: #BFBFBF;
+  --darkGray: #595959;
   --lightGray: #FAFAFA  ;
   --bg-drop-down:#fff;
   --color-drop-down: var(--black);
@@ -30,7 +31,8 @@ html.dark {
   --black: rgba(255, 255, 255);
   --ant-border: #18191C;
   --gray:#F5F5F5;
-  --darkGray: #464646;
+  --blackGray: #464646;
+  --darkGray: #a0a0a0;
   --lightGray: rgb(53, 53, 53);
   --bg-drop-down:#1F1F1F;
   --color-drop-down: #FFF0F6;
