--- a/src/assets/style/modules/_themes.scss
+++ b/src/assets/style/modules/_themes.scss
@@ -30,7 +30,7 @@ html.dark {
   --background: #1A1B1E;
   --black: rgba(255, 255, 255);
   --ant-border: #18191C;
-  --gray:#F5F5F5;
+  --gray:#b8b8b8;
   --blackGray: #464646;
   --darkGray: #a0a0a0;
   --lightGray: rgb(53, 53, 53);
