--- a/src/assets/style/modules/_ant-design.scss
+++ b/src/assets/style/modules/_ant-design.scss
@@ -117,3 +117,67 @@ textarea.ant-input, .ant-input-number, .ant-input, .ant-select-selector, .ant-in
 .header__dropdown-menu .ant-dropdown-menu-item{
   padding: 9px 12px;
 }
+
+
+// version 4
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-menu-light .ant-menu-item:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected), :where(.css-dev-only-do-not-override-eq3tly).ant-menu-light .ant-menu-submenu-title:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected),
+:where(.css-dev-only-do-not-override-eq3tly).ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-item, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-submenu-title, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-submenu-title
+{
+  color: var(--black);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-dropdown .ant-dropdown-menu, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown-menu-submenu .ant-dropdown-menu{
+  background-color: var(--bg-drop-down);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item:hover, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-item:hover, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-submenu-title:hover, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-submenu-title:hover, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item-active, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-item-active, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-submenu-title-active, :where(.css-dev-only-do-not-override-eq3tly).ant-dropdown-menu-submenu .ant-dropdown-menu .ant-dropdown-menu-submenu-title-active{
+  background-color: var(--bg-hover-drop-down);
+}
+
+textarea.ant-input, .ant-input-number, .ant-input, .ant-select-selector, .ant-input-affix-wrapper{
+  &::placeholder{
+    color: var(--gray)
+  }
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-form-item .ant-form-item-label >label{
+  color: var(--black);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-select-multiple .ant-select-selection-placeholder{
+  color: var(--gray)
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-slider .ant-slider-rail{
+  background-color: var(--slider-rail);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-slider:hover .ant-slider-rail{
+  background-color: var(--slider-rail);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-slider .ant-slider-mark-text{
+  color: var(--gray);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-input-number .ant-input-number-input{
+  color: var(--black);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-select-single.ant-select-sm .ant-select-selector,
+:where(.css-dev-only-do-not-override-eq3tly).ant-select-single.ant-select-sm:not(.ant-select-customize-input) .ant-select-selector:after,
+:where(.css-dev-only-do-not-override-eq3tly).ant-select .ant-select-arrow{
+  color: var(--black);
+}
+:where(.css-dev-only-do-not-override-eq3tly).ant-select-single.ant-select-sm.ant-select-open .ant-select-selection-item{
+  color: var(--slider-rail);
+}
+:where(.css-dev-only-do-not-override-eq3tly).ant-select-dropdown .ant-select-item{
+  color: var(--black);
+}
+
+:where(.css-dev-only-do-not-override-eq3tly).ant-select-dropdown .ant-select-item-option-selected:not(.ant-select-item-option-disabled){
+  color: var(--black);
+  background-color: var(--multi-select-selected);
+}
